Stopped Horizontal Scrolling

--- a/Source/styles.css
+++ b/Source/styles.css
@@ -236,6 +236,9 @@ li {
 
 
 @media screen and (max-width: 960px) {
+
+    body { width: 100vw; overflow-x: hidden; }
+    
     .solution-card {
         width: calc(50% - 20px);
     }
@@ -251,6 +254,9 @@ li {
 }
     
 @media screen and (max-width: 540px) {
+
+    body { width: 100vw; overflow-x: hidden; }
+    
     .solution-card {
 
         width: calc(100%);
